--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="pic d-block  w-100 rounded-bottom shadow-lg p-3 mb-5 bg-white rounded" src="/images/rest5.png" alt="First slide">
+          <img class="pic d-block  w-100 rounded-bottom shadow-lg p-3 mb-5 bg-white rounded" src="images/rest5.png" alt="First slide">
           <div class="carousel-caption d-none d-md-block">
             <h5>The Finest in Upscale Dining</h5>
             <p>Come home to Italian tradition</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="pic d-block w-100 shadow-lg p-3 mb-5 bg-white rounded" src="/images/spag.jpg" alt="Second slide">
+          <img class="pic d-block w-100 shadow-lg p-3 mb-5 bg-white rounded" src="images/spag.jpg" alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
             <h5>We only use the finest ingredients</h5>
             <p>Shipped straight from Italy</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="pic d-block w-100 shadow-lg p-3 mb-5 bg-white rounded " src="/images/rest4.png" alt="Third slide">
+          <img class="pic d-block w-100 shadow-lg p-3 mb-5 bg-white rounded " src="images/rest4.png" alt="Third slide">
           <div class="carousel-caption d-none d-md-block">
             <h5>Tyr our amazing risotto</h5>
             <p>It's out of this world</p>
@@ -91,7 +91,7 @@
 <div class="row mx-0">
   <div class="col-9 offset-1 col-lg-4 ml-5 ">
     <div class="risotto ml-2 mt-0 ">
-    <img src="/images/milan.png" alt="..." class="img-thumbnail">
+    <img src="images/milan.png" alt="..." class="img-thumbnail">
     </div>
   </div>
   <div class="col-9 offset-1 mt-0 col-lg-6 mr-5 ">
@@ -113,7 +113,7 @@
   <div class="row mb-5  ">
     <div class="col-9 mb-5 offset-1 col-lg-4 ml-5 ">
       <div class="steak offset-3 mb-5 mr-0">
-      <img src="/images/sirl.png" alt="..." class="img-thumbnail">
+      <img src="images/sirl.png" alt="..." class="img-thumbnail">
       </div>
     </div>
     <div class="col-9 offset-2 mb-5 mt-0 col-lg-5 mr-5 ">
@@ -133,7 +133,7 @@
     <div class="row mx-5 my-5">
       <div class="col-9 mb-5 offset-1 col-lg-5 ml-5">
         <div class="rack offset-1 mb-5 mr-0">
-        <img src="/images/racks.jpg" alt="..." class="img-thumbnail">
+        <img src="images/racks.jpg" alt="..." class="img-thumbnail">
         </div>
       </div>
       <div class=" col-9 offset-1 mt-0 col-lg-5 mr-5">
@@ -155,7 +155,7 @@
       <div class="row my-5">
         <div class="col-9 mb-5 offset-1 col-lg-5 mt-5 ml-5">
           <div class="lobster offset-2 mb-5 mr-0 ">
-          <img src="/images/lobster.jpg" alt="..." class="img-thumbnail">
+          <img src="images/lobster.jpg" alt="..." class="img-thumbnail">
           </div>
         </div>
         <div class="col-9 offset-1 mt-0 col-lg-5 mr-5">
@@ -177,7 +177,7 @@
         <div class="row my-5">
           <div class="col-9 mb-5 offset-1 col-lg-5 ml-5">
             <div class="spag offset-2 mb-5 mr-0 ">
-            <img src="/images/spag.jpg" alt="..." class="img-thumbnail">
+            <img src="images/spag.jpg" alt="..." class="img-thumbnail">
             </div>
           </div>
           <div class="col-9 offset-1 mt-0 col-lg-5 mr-5 ">
@@ -204,7 +204,7 @@
   <div class="jumbotron shadow-lg p-3 my-5 bg-white rounded  ">
  <div class="row my-5">
     <div class="col-9 col-lg-5 mr-5 ">
-      <img class="pic ml-1 mr-5" src="/images/rest4.png" alt=" slide">
+      <img class="pic ml-1 mr-5" src="images/rest4.png" alt=" slide">
     </div>
     
     <div class="col-9  my-5 col-lg-6 ml-3 ">
@@ -224,7 +224,7 @@
 <div class="row">
   <div class="col-md-6 col-lg-3 mt-5 ">
     <div class="card mx-5" style="width: 16rem;">
-      <img class="card-img-top" src="/images/wine3.jpg" alt="Card image cap">
+      <img class="card-img-top" src="images/wine3.jpg" alt="Card image cap">
       <div class="card-body">
         <h3 class="card-title">Masetto Tuscany</h3>
         <p class="card-text">Considered one of the best Tuscanny wines ever</p>
@@ -233,7 +233,7 @@
   </div>
   <div class="col-md-6 col-lg-3 mt-5 ">
     <div class="card mx-5" style="width: 16rem;">
-      <img class="card-img-top" src="/images/wine2.jpg" alt="Card image cap">
+      <img class="card-img-top" src="images/wine2.jpg" alt="Card image cap">
       <div class="card-body">
         <h3 class="card-title">2018 Lafite Rothschild Carruades De Lafite</h3>
         <p class="card-text">An amazing red</p>
@@ -242,7 +242,7 @@
   </div>
   <div class="col-md-6 col-lg-3 mt-5 ">
     <div class="card mx-5" style="width: 16rem;">
-      <img class="card-img-top" src="/images/wine1.png" alt="Card image cap">
+      <img class="card-img-top" src="images/wine1.png" alt="Card image cap">
       <div class="card-body">
         <h3 class="card-title">SIERRA CANTABRIA CRIANZA 2015</h3>
         <p class="card-text">From Spain, just perfect</p>
@@ -251,7 +251,7 @@
   </div>
     <div class="col-md-6   col-lg-3 mt-5">
       <div class="card mx-5 " style="width: 16rem;">
-        <img class="card-img-top" src="/images/wine5.png" alt="Card image cap">
+        <img class="card-img-top" src="images/wine5.png" alt="Card image cap">
         <div class="card-body">
           <h3 class="card-title">Marques De Murrieta</h3>
           <p class="card-text">A wonderful red wine</p>
@@ -315,22 +315,22 @@
 <footer>
   <div class="row border border-dark bg-dark">
     <div class="col-2 ">
-    <img class="mich mx-2" src="/images/mich.jpg" alt=" slide">
+    <img class="mich mx-2" src="images/mich.jpg" alt=" slide">
     </div>
     <div class="col-2 ">
-      <img class="mich mx-2" src="/images/aa.png" alt=" slide">
+      <img class="mich mx-2" src="images/aa.png" alt=" slide">
       </div>
       <div class="col-2 ">
-        <img class="mich mx-2" src="/images/aba.jpg" alt=" slide">
+        <img class="mich mx-2" src="images/aba.jpg" alt=" slide">
         </div>
         <div class="col-2 ">
-          <img class="mich mx-2" src="/images/acc.jpg" alt=" slide">
+          <img class="mich mx-2" src="images/acc.jpg" alt=" slide">
           </div>
           <div class="col-2 ">
-            <img class="mich mx-2" src="/images/ccc.jpg" alt=" slide">
+            <img class="mich mx-2" src="images/ccc.jpg" alt=" slide">
             </div>
             <div class="col-2 ">
-              <img class="mich mx-5" src="/images/fff.jpg" alt=" slide">
+              <img class="mich mx-5" src="images/fff.jpg" alt=" slide">
               </div>
   </div>
 </footer>
